Chore(query-about-elements): Create file for first exercise and configure environment

--- a/vjudge/train2/queries-about-elements/makefile
+++ b/vjudge/train2/queries-about-elements/makefile
@@ -7,6 +7,7 @@ BUILD_DIR = build/
 APP_EXT = .app
 OBJ_EXT = .o
 SRC_EXT = .cpp
+LINE_BREAK = 
  
 # File names
 SOURCES = $(wildcard *.cpp)
@@ -14,23 +15,29 @@ OBJECTS = $(SOURCES:%$(SRC_EXT)=$(BUILD_DIR)%$(OBJ_EXT))
 EXEC = main$(APP_EXT)
 
 # Main target
-$(EXEC): $(BUILD_DIR) $(OBJECTS)
+$(EXEC): $(BUILD_DIR) $(OBJECTS) $(RUN_DIR)
+	$(eval LINE_BREAK = \n)
 	$(CC) $(OBJECTS) -o $(EXEC)
 
-# Make the build dir if it doesn't exist'
+# Make the build dir if it doesn't exist
 $(BUILD_DIR):
 	@mkdir $(BUILD_DIR)
 
+# Make the output dir if doesn't exists
+$(RUN_DIR):
+	@mkdir $(RUN_DIR)
+
 # To obtain object files
 $(BUILD_DIR)%.o: %.cpp
-	@echo "\033[1;37mBuilding" $< "\033[0m"
+	@echo "\033[1;37m \t Building" $< "\033[0m"
 	@$(CC) -c $(CC_FLAGS) $< -o $@
  
 # To remove generated files
 clean:
-	@echo "Removing executables"
-	@rm -rf *$(BUILD_DIR) 
-	@rm -f $(EXEC) $(OBJECTS)
+	@echo "\033[1;37m \n\t Removing executables\n\033[0m"
+	@rm -f $(EXEC) $(OBJECTS) *$(OBJ_EXT)
+	@rm -rf $(BUILD_DIR) 
 
-run:
+run: $(EXEC)
+	@echo "\033[1;37m $(LINE_BREAK)\t Runing" $(notdir $<) "\033[0m"
 	@./$(EXEC)
